
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct scatterlist {int dummy; } ;
struct device {int dummy; } ;
typedef enum dma_data_direction { ____Placeholder_dma_data_direction } dma_data_direction ;
typedef scalar_t__ dma_addr_t ;


 int DMA_BIDIRECTIONAL ;
 int DMA_FROM_DEVICE ;
 int DMA_TO_DEVICE ;
 int dma_unmap_sg (struct device*,struct scatterlist*,int,int) ;
 int dma_unmap_single (struct device*,scalar_t__,int,int) ;

__attribute__((used)) static void caam_unmap(struct device *dev, struct scatterlist *src,
         struct scatterlist *dst, int src_nents,
         int dst_nents, dma_addr_t iv_dma, int ivsize,
         enum dma_data_direction iv_dir, dma_addr_t qm_sg_dma,
         int qm_sg_bytes)
{
 if (dst != src) {
  if (src_nents)
   dma_unmap_sg(dev, src, src_nents, DMA_TO_DEVICE);
  if (dst_nents)
   dma_unmap_sg(dev, dst, dst_nents, DMA_FROM_DEVICE);
 } else {
  dma_unmap_sg(dev, src, src_nents, DMA_BIDIRECTIONAL);
 }

 if (iv_dma)
  dma_unmap_single(dev, iv_dma, ivsize, iv_dir);
 if (qm_sg_bytes)
  dma_unmap_single(dev, qm_sg_dma, qm_sg_bytes, DMA_TO_DEVICE);
}
